# lavalink-client-rs

./: Cargo.toml  README.md
docs/: GUIDE.md  events.md  filters.md  getting-started.md  node-options.md  players.md  resuming.md  searching.md
examples/: basic.rs
src/: constants.rs  lib.rs  manager.rs  node.rs  node_link.rs  node_manager.rs  player.rs  queue.rs  statics.rs  utils.rs
src/custom_searches/: bandcamp_search.rs  mod.rs
src/types/: events.rs  filters.rs  manager.rs  mod.rs  node.rs  node_link.rs  player.rs  queue.rs  track.rs  utils.rs
