[package]
name = "lavalink-client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
futures = "0.3.32"
futures-util = "0.3.32"
http = "1.4.0"
lazy_static = "1.5.0"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tungstenite = "0.28.0"
url = "2.5.8"
urlencoding = "2.1.3"
tracing-subscriber = "0.3"
